@@ -39,7 +39,9 @@ dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter-api:5.9.0")
     testImplementation("org.junit.jupiter:junit-jupiter-params:5.9.0")
     testImplementation("org.mockito:mockito-core:4.7.0")
-    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine:5.9.0")
+    testImplementation("org.mockito:mockito-junit-jupiter:4.7.0")
+    testImplementation("org.junit.platform:junit-platform-launcher:1.9.0")
+    testImplementation("org.junit.jupiter:junit-jupiter-engine:5.9.0")
 }
 
 checkstyle {
@@ -90,6 +92,20 @@ tasks {
         jvmArgs("--enable-preview")
     }
 
+    register<JavaExec>("grade") {
+        group = "verification"
+
+        systemProperties(
+            "junit.jupiter.execution.timeout.testable.method.default" to "2000 ms"
+        )
+
+        dependsOn(testClasses)
+        classpath = sourceSets.test.get().runtimeClasspath
+        main = "hk.ust.comp3021.utils.Grader"
+        jvmArgs("--enable-preview")
+    }
+
+
     withType<Checkstyle> {
 
     }
@@ -104,6 +120,8 @@ tasks {
         })
 
         keep("public class hk.ust.comp3021.Sokoban { public static void main(java.lang.String[]); }")
+
+        optimizations("!class/merging/horizontal")
 
         printmapping(jar.flatMap { it.destinationDirectory.file("${project.name}-proguard-mapping.txt") })
         overloadaggressively()
